# BoulderDashBevy

./: Cargo.toml  LICENSE  README.md
assets/: BlitCRT.cs  CrtPixel.cg
assets/maps/: start_map.txt
assets/shaders/: crt.wgsl  custom_material_chromatic_aberration.wgsl  eight_bit_lines.wgsl
src/: animate_sprites.rs  camera_follow.rs  components.rs  debug.rs  diamond.rs  main.rs  player.rs  relocate_components.rs  tile_map.rs  tile_sheet.rs
src/plugins/: animation_state.rs  dig_tunnel.rs  mod.rs  movement.rs  player_input.rs  post_process.rs  sprite_animation.rs
src/resources/: mod.rs  sprite_sequences_resource.rs
