[package]
name = "bevy_template"
version = "0.2.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.9", features = [
    #"bevy_gilrs",
    #"bevy_winit",
    #"render",
    #"png",
    #"hdr",
    #"vorbis",
    #"x11",
    #"filesystem_watcher",
    #"trace",
     ] }

bevy_kira_audio = { version = "0.12.0", features = ["ogg", "wav"] }
#bevy-inspector-egui = "0.12.1"
serde = "1.0"
ron = "0.7"
rand = "0.8"
bevy_ecs_tilemap = "0.9.0"
once_cell = "1.13.1"
dyn-clone = "1.0.9"

# cargo run --release --features bevy/trace,bevy/trace_chrome
